@@ -22,8 +22,7 @@ The Initial Developer of the Covered Software is
   <parent>
     <groupId>org.terracotta</groupId>
     <artifactId>terracotta-root</artifactId>
-    <version>4.3.10-SNAPSHOT</version>
-    <relativePath>..</relativePath>
+    <version>4.4.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>build-parent</artifactId>
@@ -38,26 +37,22 @@ The Initial Developer of the Covered Software is
   </licenses>
 
   <properties>
-    <group>unit</group>
-
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <core-storage-api.version>1.4</core-storage-api.version>
     <heap-core-storage.version>1.2.1</heap-core-storage.version>
-    <bigmemory-core-storage.version>2.1.1</bigmemory-core-storage.version>
+    <bigmemory-core-storage.version>2.1.3</bigmemory-core-storage.version>
     <search.version>1.5.14</search.version>
-    <management-core.version>2.1.27</management-core.version>
+    <management-core.version>2.1.35-SNAPSHOT</management-core.version>
     <session-management.version>4.3.9</session-management.version>
     <tc-messaging.version>1.1.6</tc-messaging.version>
     <terracotta-license.version>1.2.3</terracotta-license.version>
     <toolkit-api.version>2.10</toolkit-api.version>
     <toolkit-api-internal.version>1.19</toolkit-api-internal.version>
     <!-- version of ehcache embedded inside toolkit -->
-    <ehcache.version>2.10.10-SNAPSHOT</ehcache.version>
+    <ehcache.version>2.11.0-SNAPSHOT</ehcache.version>
     <tcconfig.version>9.6</tcconfig.version>
-    <linked-child-process.version>1.0.17</linked-child-process.version>
-    <groovy-maven-plugin.version>2.1.1</groovy-maven-plugin.version>
-    <groovy.version>2.5.8</groovy.version>
+    <linked-child-process.version>2.0.2</linked-child-process.version>
     <skip.testjar>false</skip.testjar>
     <listName>checkshort.txt</listName>
     <localMavenRepository>${user.home}/.m2/repository</localMavenRepository>
@@ -78,7 +73,6 @@ The Initial Developer of the Covered Software is
     <surefire.max-memory>1g</surefire.max-memory>
     <surefire.additional-jvm-args/>
     <surefire.additional-jvm-module-args/>
-    <should_skip_tests>true</should_skip_tests>
     <surefire.jvm.mode>-server</surefire.jvm.mode>
     <surefire.argLine>${surefire.jvm.mode}
       -Xms${surefire.min-memory}
@@ -93,7 +87,9 @@ The Initial Developer of the Covered Software is
       -Dtc.install-root.ignore-checks=true
       -Dcom.sun.management.jmxremote
       ${surefire.additional-jvm-args}
-      ${surefire.additional-jvm-module-args}</surefire.argLine>
+      ${surefire.additional-jvm-module-args}
+      -Djdk.attach.allowAttachSelf
+    </surefire.argLine>
   </properties>
 
   <dependencyManagement>
@@ -179,7 +175,7 @@ The Initial Developer of the Covered Software is
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
+      <artifactId>mockito-inline</artifactId>
     </dependency>
     <dependency>
       <groupId>org.terracotta</groupId>
@@ -194,7 +190,7 @@ The Initial Developer of the Covered Software is
     <dependency>
       <groupId>org.terracotta.junit</groupId>
       <artifactId>test-listeners</artifactId>
-      <version>1.0.2</version>
+      <version>1.0.3</version>
       <scope>test</scope>
     </dependency>         
   </dependencies>
@@ -254,16 +250,13 @@ The Initial Developer of the Covered Software is
           <groupId>org.terracotta</groupId>
           <artifactId>maven-forge-plugin</artifactId>
           <version>${maven-forge-plugin.version}</version>
-          <configuration>
-            <skipTests>true</skipTests>
-          </configuration>
           <executions>
+            <!--
+            We do not bind phase/goals here so that behavior can be controlled by
+            definitions in forge-parent (-Psystem-tests will turn this off)
+            -->
             <execution>
               <id>default-test</id>
-              <phase>integration-test</phase>
-              <goals>
-                <goal>test</goal>
-              </goals>
               <configuration>
                 <properties>
                   <property>
@@ -276,12 +269,13 @@ The Initial Developer of the Covered Software is
                 <reportFormat>plain</reportFormat>
                 <includes>
                   <include>**/*Test.java</include>
-                </includes>         
-                <skipTests>${should_skip_tests}</skipTests>
+                </includes>
                 <forkCount>1</forkCount>
                 <reuseForks>false</reuseForks>
                 <forkedProcessTimeoutInSeconds>${tc.tests.info.junit-test-timeout-inseconds}</forkedProcessTimeoutInSeconds>
                 <useSystemClassLoader>true</useSystemClassLoader>
+                <useManifestOnlyJar>true</useManifestOnlyJar>
+                <trimStackTrace>false</trimStackTrace>
                 <workingDirectory>${project.build.directory}/temp</workingDirectory>
                 <devLog>true</devLog>
                 <argLine>${surefire.argLine}</argLine>
@@ -333,24 +327,17 @@ The Initial Developer of the Covered Software is
 
     <plugins>
       <plugin>
-        <groupId>org.terracotta</groupId>
-        <artifactId>maven-forge-plugin</artifactId>
-      </plugin>  
-      <plugin>
         <groupId>org.codehaus.gmaven</groupId>
         <artifactId>groovy-maven-plugin</artifactId>
-      </plugin>      
+      </plugin>
+      <plugin>
+        <groupId>org.terracotta</groupId>
+        <artifactId>maven-forge-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 
   <profiles>
-    <profile>
-      <id>system-tests</id>
-      <properties>
-        <should_skip_tests>false</should_skip_tests>
-      </properties>
-    </profile>
-
     <profile>
       <id>client-jvm</id>
       <properties>
@@ -378,9 +365,6 @@ The Initial Developer of the Covered Software is
 
     <profile>
       <id>check-short</id>
-      <properties>
-        <should_skip_tests>false</should_skip_tests>
-      </properties>     
       <build>
         <plugins>
           <plugin>
@@ -399,42 +383,6 @@ The Initial Developer of the Covered Software is
         </plugins>      
       </build>
     </profile>   
-
-    <profile>
-      <id>check</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.gmaven</groupId>
-            <artifactId>groovy-maven-plugin</artifactId>
-            <version>${groovy-maven-plugin.version}</version>
-            <executions>
-              <execution>
-                <id>decide-which-group-should-run-tests</id>
-                <phase>process-test-resources</phase>
-                <goals>
-                  <goal>execute</goal>
-                </goals>
-                <configuration>
-                  <source>
-                    def target = properties['target']
-                     if (target == null) fail("-Dtarget needs to be set for this profile")
-                    def targetSet = new HashSet(Arrays.asList(target.split(",")))
-                    def projectGroups = new HashSet()
-                    if (project.properties['group'] != null) {
-                      projectGroups.addAll(Arrays.asList(project.properties['group'].split(",")))
-                    }
-                    targetSet.retainAll(projectGroups)
-                    def shouldSkipTest = targetSet.size() == 0
-                    project.properties.should_skip_tests = String.valueOf(shouldSkipTest)
-                  </source>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>         
-        </plugins>          
-      </build>
-    </profile>
   </profiles>
 
 </project>
